# open_vino_ros2_od_rs-release

./: CMakeLists.txt  README.md  build_run_yolo_v8_ros2.sh  package.xml  patches.conf  tracks.yaml
include/open_vino_ros2_od_rs/: inference.h
launch/: object_detection_launch.py
onxx_runtime/yolov8/CPP/detect_from_images/: build.sh  main.cpp  run.sh
onxx_runtime/yolov8/CPP/detect_from_videos/: CMakeLists.txt  README.md  main.cpp  run.sh
onxx_runtime/yolov8/CPP/detect_from_videos_cuda/: CMakeLists.txt  README.md  build.sh  run.sh
onxx_runtime/yolov8/NodeJS/yolov8_onnx_nodejs/: package-lock.json
onxx_runtime/yolov8/ROS2/src/object_detection/: CMakeLists.txt
open_vino/: first_time_setup.sh  model_download_export.sh  model_export.py  run.sh
open_vino/ROS2/src/open_vino_ros2_od/launch/: object_detection_open_vino_launch.py
open_vino/ROS2/src/open_vino_ros2_od/src/: inference.cc  main.cc
open_vino/ROS2/src/open_vino_ros2_od_rs/: CMakeLists.txt
open_vino/ROS2/src/open_vino_ros2_od_rs/launch/: rs_object_detection_open_vino_launch.py
open_vino/ROS2/src/open_vino_ros2_od_rs/src/: inference.cc
open_vino/YOLOv8-OpenVINO-CPP-Inference/: CMakeLists.txt
open_vino/YOLOv8-OpenVINO-LIVE-Inference/: CMakeLists.txt  inference.cc  main.cc
src/: inference.cpp  main.cc  main.cpp
