<?xml version="1.0"?>
<package format="2">
  <name>open_vino_ros2_od_rs</name>
  <version>0.0.2</version>
  <description>ROS 2 package for YOLOv8 Inference with OPENVINO and OpenCV</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
